@@ -1,3 +1,7 @@
+2 March 2011: Matthijs:
+	- fix #bug354: make realclean cleans too much
+	- added make devclean for cleaning up autoconf and automake stuff
+
 24 February 2011: Matthijs
 	- fix #bug350: refused notifies should log client ip.
 
